mdapioutput/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Dealership_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealership</label>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtraMileCost__c</fullName>
        <label>Extra Mile Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MilesLimit__c</fullName>
        <label>Miles Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>